# zephr_agent_runtime

./: .envrc  .gitignore  LICENSE  README.md  platform_versions.json  pyproject.toml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/sdks/zephr_agent_runtime/: build.gradle.kts
android/sdks/zephr_agent_runtime/src/main/: AndroidManifest.xml
android/sdks/zephr_agent_runtime/src/main/cpp/: CMakeLists.txt  zephr_agent_jni.cpp
android/sdks/zephr_agent_runtime/src/main/java/xyz/zephr/sdks/agent/: 0_ZephrAgentRuntimeAPI.kt
android/sdks/zephr_agent_runtime/src/main/java/xyz/zephr/sdks/agent/internal/: ZephrAgentRuntimeJniBridge.kt
android/sdks/zephr_agent_runtime/src/main/java/xyz/zephr/sdks/agent/litertlm/: 0_LiteRtLmAPI.kt
android/sdks/zephr_agent_runtime/src/test/java/xyz/zephr/sdks/agent/: ZephrAgentRuntimeHttpTest.kt
android/sdks/zephr_agent_runtime/src/test/java/xyz/zephr/sdks/agent/litertlm/: LiteRtLmFacadeTest.kt
apple/: README.md  project.yml
apple/sdks/zephr_agent_runtime/Public/: ZephrAgentRuntime.h
apple/sdks/zephr_agent_runtime/Sources/: 0_LiteRTLMAPI.swift  0_ZephrAgentRuntimeAPI.swift  ZephrAgentRuntime.swift  ZephrAgentRuntimeCBridge.swift  ZephrAgentRuntimeConversation.swift  ZephrAgentRuntimeConversationTools.swift  ZephrAgentRuntimeMCP.swift
apple/xcconfigs/: Debug.xcconfig  Release.xcconfig
clis/: prepare_dev.py  prepare_native_deps.py  prepare_platform_tools.py  rebuild_tinyllm.py
clis/support/: paths.py
clis/support/dev_environment/: __init__.py  native_deps_guard.py  prepare_dev.py
clis/support/nanobind/: CMakeLists.txt  zephr_agent_runtime_nanobind.cpp  zephr_agent_runtime_nanobind_common.hpp
clis/support/native_dependencies/: locator.py  prepare_native_deps.py  process_runner.py  rebuild_tinyllm.py
clis/support/platform_dependencies/: android_config.py  prepare_platform.py  prepare_platform_tools.py
clis/tinylib/tinycli/: __init__.py  effects.py  pipeline.py  plotly_visualization.py  signature.py  ui.py
clis/tinylib/tinylog/: __init__.py  tinylog.py
clis/zephr_agent_runtime/: __init__.py
clis/zephr_agent_runtime/nanobind/: __init__.py  zephr_agent_runtime_nanobind.pyi
data/model_manifests/channels/: public.json
docs/: third_party_native_deps.md
tinylib/tinyllm/: CMakeLists.txt
tinylib/tinyllm/core/: 0_tinyllm_deps.hpp  litert_api.h  tinyllm_bundle_inspect.hpp  tinyllm_core.hpp  tinyllm_engine.hpp  tinyllm_grammar.hpp  tinyllm_inference.hpp  tinyllm_model_gemma4.hpp  tinyllm_rag.hpp  tinyllm_translation_unit.cpp
tinylib/tinylog/: CMakeLists.txt  tinylog.hpp
tinylib/zephr_agent_runtime/: CMakeLists.txt
tinylib/zephr_agent_runtime/core/: 0_zephr_agent_deps.hpp  zephr_agent_c_api.cpp
tinylib/zephr_agent_runtime/public/: zephr_agent_c_api.h
